# api/openapi-spec/swagger.json
@@ -234,6 +234,120 @@
         }
       }
     },
+    "kruise.apps.v1alpha1.RolloutControl": {
+      "description": "RolloutControl is the Schema for the rolloutcontrols API",
+      "type": "object",
+      "properties": {
+        "apiVersion": {
+          "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources",
+          "type": "string"
+        },
+        "kind": {
+          "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds",
+          "type": "string"
+        },
+        "metadata": {
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ObjectMeta"
+        },
+        "spec": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutControlSpec"
+        },
+        "status": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutControlStatus"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.RolloutControlDefinition": {
+      "description": "RolloutControlDefinition is the Schema for the rolloutcontroldefinitions API",
+      "type": "object",
+      "properties": {
+        "apiVersion": {
+          "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources",
+          "type": "string"
+        },
+        "kind": {
+          "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds",
+          "type": "string"
+        },
+        "metadata": {
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ObjectMeta"
+        },
+        "spec": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutControlDefinitionSpec"
+        },
+        "status": {
+          "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutControlDefinitionStatus"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.RolloutControlDefinitionList": {
+      "description": "RolloutControlDefinitionList contains a list of RolloutControlDefinition",
+      "type": "object",
+      "required": [
+        "items"
+      ],
+      "properties": {
+        "apiVersion": {
+          "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources",
+          "type": "string"
+        },
+        "items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutControlDefinition"
+          }
+        },
+        "kind": {
+          "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds",
+          "type": "string"
+        },
+        "metadata": {
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ListMeta"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.RolloutControlDefinitionSpec": {
+      "description": "RolloutControlDefinitionSpec defines the desired state of RolloutControlDefinition",
+      "type": "object"
+    },
+    "kruise.apps.v1alpha1.RolloutControlDefinitionStatus": {
+      "description": "RolloutControlDefinitionStatus defines the observed state of RolloutControlDefinition",
+      "type": "object"
+    },
+    "kruise.apps.v1alpha1.RolloutControlList": {
+      "description": "RolloutControlList contains a list of RolloutControl",
+      "type": "object",
+      "required": [
+        "items"
+      ],
+      "properties": {
+        "apiVersion": {
+          "description": "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#resources",
+          "type": "string"
+        },
+        "items": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/kruise.apps.v1alpha1.RolloutControl"
+          }
+        },
+        "kind": {
+          "description": "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#types-kinds",
+          "type": "string"
+        },
+        "metadata": {
+          "$ref": "#/definitions/io.k8s.apimachinery.pkg.apis.meta.v1.ListMeta"
+        }
+      }
+    },
+    "kruise.apps.v1alpha1.RolloutControlSpec": {
+      "description": "RolloutControlSpec defines the desired state of RolloutControl",
+      "type": "object"
+    },
+    "kruise.apps.v1alpha1.RolloutControlStatus": {
+      "description": "RolloutControlStatus defines the observed state of RolloutControl",
+      "type": "object"
+    },
     "kruise.apps.v1alpha1.SidecarContainer": {
       "description": "SidecarContainer defines the container of Sidecar",
       "type": "object",
